--- a/IndirectTracing/IndirectTracing/Info.plist
+++ b/IndirectTracing/IndirectTracing/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>bluetooth always on</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>bluetooth is required for sth</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -39,6 +43,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -59,9 +68,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>App requires Bluetooth access under any condition.</string>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>App requires Bluetooth access to connect peripheral devices.</string>
 </dict>
 </plist>
